--- a/files/why：为什么做互联网医院/styles.css
+++ b/files/why：为什么做互联网医院/styles.css
@@ -303,7 +303,7 @@
   -moz-box-shadow:none;
   -webkit-box-shadow:none;
   box-shadow:none;
-  font-family:'华文琥珀 Oblique', '华文琥珀 Regular', '华文琥珀';
+  font-family:'华文琥珀 Oblique', '华文琥珀';
   font-weight:400;
   font-style:oblique;
   font-size:36px;
@@ -316,7 +316,7 @@
   top:641px;
   width:442px;
   height:37px;
-  font-family:'华文琥珀 Oblique', '华文琥珀 Regular', '华文琥珀';
+  font-family:'华文琥珀 Oblique', '华文琥珀';
   font-weight:400;
   font-style:oblique;
   font-size:36px;
